package game;

public interface LevelStatsObserver {
    void onStatsChanged();
}
